# open-wearables

./: .gitignore  AGENTS.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
agent/app/: config.py  main.py
agent/app/services/: conversation.py
agent/app/utils/: exceptions.py
agent/config/: .env.example
backend/: Dockerfile
backend/app/: config.py  mappings.py
backend/app/models/: __init__.py  lab_result.py  meal.py  personal_record.py
backend/app/repositories/: event_record_repository.py
backend/app/schemas/: developer.py  events.py  lab_result.py  nutrition.py  summaries.py
backend/app/services/: event_record_service.py  lab_result_service.py  (+3 more)
backend/config/: .env.example
frontend/: .env.example  tailwind.config.ts  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
mcp/app/: main.py
services/ai-backend/: .env.example  Dockerfile  pyproject.toml
services/ai-backend/app/: config.py  database.py  main.py
services/ai-backend/app/agents/: anomaly_agent.py  recommendation_agent.py  summary_agent.py
services/ai-backend/app/api/routes/: activity_feed.py  alerts.py  health_scores.py  notes.py  portfolio.py  recommendations.py  summary.py
services/ai-backend/app/models/: __init__.py  alert.py  coaching_note.py  recommendation.py
services/ai-backend/app/schemas/: __init__.py  alerts.py  health_scores.py  notes.py  portfolio.py  recommendations.py  summary.py
services/ai-backend/app/services/: health_scores.py  ow_client.py
services/ai-backend/app/tasks/: anomaly_scan.py  recommendation_scan.py
(+120 files in other folders)
