[project]
name = "coachboard-ai"
version = "0.1.0"
description = "AI backend for CoachBoard — anomaly detection, health summaries, coaching notes"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pydantic-ai>=0.1",
    "anthropic>=0.40",
    "httpx>=0.28",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.21",
    "apscheduler>=3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
